--- a/VS_Code (PY + MySql _ Project)/ex_1.ipynb
+++ b/VS_Code (PY + MySql _ Project)/ex_1.ipynb
@@ -41,7 +41,7 @@
    ],
    "source": [
     "%load_ext sql\n",
-    "%sql mysql+mysqlconnector://root:Master#123***@localhost/retail_db\n"
+    "%sql mysql+mysqlconnector://root:*********@localhost/retail_db\n"
    ]
   },
   {
